--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,8 +5,8 @@
 #git_webhook_repo_name:
 
 # Path to git repos on server
-git_webhook_repos_path=/srv/git/repositories
+git_webhook_repos_path: /srv/git/repositories
 
 # Base path defaults to empty string in the typical case where there is
 # only one namespace for git repositories on a server.
-git_webhook_base_path=""
+git_webhook_base_path: ''
